docs/2.6/_sources/pages/release.rst.txt
#############
Release Notes
#############

********
OEI v3.0
********
Open Edge Insights (OEI) v3.0 is a major release from the previous release of v2.6.x. In this open-source release, the following features have been added and dropped. In addition to that, many small fixes and general improvements are also included this release.

New Features
============

* Web Deployment Tool - A GUI-based tool to facilitate the OEI configuration and deployment for single and multiple video streams
* Restructured the OEI provisioning flow - Containerized OEI provisioning step to make the OEI deployment fully containerized
* NodeRED integration - Exposes the GET interface from the Rest Data Export service to facilitate the NodeRED integration
* Repackaging the OEI core libs (C/C++, Python, Golang) - Provides an easy integration in the existing container ecosystems like Tibco, Edgex, etc.
* Enable Image ingestion support in OpenCV ingestor - The Video Ingestion service is enabled to support image ingestion
* Supporting C++ OEI MessageBus wrapper APIS for easy integration of Realsense like cameras - Added C++ message bus wrappers
* Jupyter Notebook Visual Studio Code plugin for Python UDFs development - Enhances the developer experience by allowing you to access Jupyter Notebook in VSCode
* Web Visualizer improvements - Optimized the network bandwidth consumption with multiple streams visualization
* OneAPI based UDF using the DPCPP compiler - Enabled blur UDF to demonstrate oneAPI based UDF integration
* Support edit options for the multi-instance video pipeline configs - Allows you to have backup of the multi-instance deployment configs
* Supporting Video Analytics Serving based OEI service - Uses the common Edge Video Analytics Microservice (EVAM) to run in the OEI context
* ML optimizations for the Time-series pipeline - Optimization by using the Scikit-learn-intelex instead of the daal4py package
* Rebranding of Edge Insights for Industrial (EII) as Open Edge Insights (OEI)

Dropped Features
================

The following features have been dropped in OEI v3.0 release:

* docker-compose support to do multi-node deployment (Helm charts way of multi-node deployment on k8s cluster to be continued)
* ELK (Elasticsearch, Logstash, and Kibana) integration with OEI is discontinued

Known Issues
============

* Grafana video use case helm chart is not supported.
* EVAM helm chart is not supported.
* Python Samples for Alpine is not supported.

**********
EII v2.6.2
**********

EII v2.6.2 is a bugfix release on top of EII v2.6.1 release.

.. note:: We recommend EII users (customers) using `EII ELK feature (https://github.com/open-edge-insights/eii-core/tree/v2.6.1/build/remote_logging#eii-distributed-services-centralized-logging-using-elk)`_ to upgrade to this version.

Fixes
=====

* [SECURITY] Updated the docker image version of ELK (Elasticsearch, Logstash and Kibana) stack 
  to use the recommended ones as per https://www.elastic.co/blog/new-elasticsearch-and-logstash-releases-upgrade-apache-log4j2 
  where log4j package has been updated to latest version
* Minor README updates

**********
EII v2.6.1
**********
EII v2.6.1 is a bugfix release on top of EII v2.6 release

Bug fixes
=========

* Fixed ZMQ ZAP issue
* Fixed "REQUEST_BUSY" issues seen with OpenVINO python and C++ inference
  engine bindings in EII udfs by protecting the critical section (Using
  OpenVINO data runtime image 2021.4.1)
* Fixed OpcuaExport service issue in ansible deployment
* Fixed golang installation in baremetal
* Fixed and added more documentation around DNS issue
* Prefix DOCKER_REGISTRY to provisioning images
* Fixed helm environment failure for OpcuaExport service
* Further added improvements to READMEs
* Fixed Visualizer not displaying text added in JupyterNotebook issue
* Enabled support for third party OPCUA GUI clients to connect to OpcuaExport service

********
EII v2.6
********

Features
========

* Ansible playbooks for EII installation, provisioning and cluster set up (single & multi nodes) 
 
    * Enable setup of single/multi-nodes deployment 
    * Multi-nodes deployment can be done with single command 
 
* Helm charts for K8s deployment 
 
    * Deploy containers to Kubernetes cluster using Helm charts 

* Support for Jupyter Notebooks for developing UDFs (User Defined Functions) 
 
    * UDF development in python can be done using Jupyter Notebook 
 
* Enabling Realsense Cameras 
 
    * VI support ingestion from Realsense camera 
    * Generate point cloud data 
 
* Prebuilt containers distribution 
 
* EII video pipeline multi-Stream synchronous processing support 
 
* Ubuntu 20.04 Host OS and docker base image support. 
 
* C API layer support for EII Config Mgr. 
 
* Timeseries Message Bus connections 
 
    * EII Messagebus Output plugin for Telegraf 
    * EII Messagebus Input and output nodes for Kapacitor 

Known Issues
============

* Encoding cannot be enabled with native PCL udf
* NativePCLIngestion CustomUDF throws warnings while processing rs2 depth frames

**********
EII v2.5.3
**********

EII v2.5.3 is a bugfix release on top of EII v2.5.2 release.

.. note:: 

   We recommend EII users (customers) using `EII ELK feature` (https://github.com/open-edge-insights/eii-core/tree/v2.5.2/build/remote_logging#eii-distributed-services-centralized-logging-using-elk) to upgrade to this version.

Fixes
=====

* [SECURITY] Updated the docker image version of ELK (Elasticsearch, Logstash and Kibana) stack 
  to use the recommended ones as per https://www.elastic.co/blog/new-elasticsearch-and-logstash-releases-upgrade-apache-log4j2 
  where log4j package has been updated to latest version
* EtcdUI service intermittent build issue is been fixed

**********
EII v2.5.2
**********
EII v2.5.2 is a bugfix release on top of EII v2.5.1 release

Bug fixes
=========

* Fixed ZMQ ZAP issue
* Fixed "REQUEST_BUSY" issues seen with OpenVINO python and C++ inference
  engine bindings in EII udfs by protecting the critical section (Using
  OpenVINO data runtime image 2021.4.1)
* Fixed issue around `cmake` existence check in eii_libs_installer.sh script
* Fixed InfluxDBConnector and RestDataExport issues in k8s environment

**********
EII v2.5.1
**********
EII v2.5.1 is a bugfix release on top of EII v2.5 release

Bug fix
=======

* Fixed the issue around updating the ~/.docker/config.json behind proxy network in pre_requisite.sh script
  (Only https://github.com/open-edge-insights/eii-core repo has been changed in this release)

********
EII v2.5
********

Features
========

* Added eis-messagebus-go repo for EII-EdgeX integration

* Added pre-requisite installer script (to install docker-ce, docker-compose etc.,) and EII uninstaller script

* UX/DX Improvements

    * Enable Volume mount for UDFs
    * eis_builder to auto-create multi-instance boilerplate configurations
    * Small Analytics size
    * Pylon viewer export settings
    * Option to Disable Bounding box in Both Visualizer

* Benchmarking Code Release in EII

    * Release Video Ingest Benchmarking 
    * Release Time series Ingest Benchmarking

* Kubernetes orchestrator enablement

    * Single node deployment
    * Multi-node deployment

* Revamp Configuration APIs for EII
    
    * Revamp Config Manager API
    * Implement C ETCD Config library

* Time series improvements

    * Enable Multiple Telegraf instances
    * Enable multiple UDF support with Kapacitor.
    * Enable Random Forest Algo
    * Implement EISMessageBus (ZMQ) plugin for Telegraf.

* Video use case improvements

    * Support more popular GigE camera in VI
    * Add snapshot feature for SW trigger (feed in just one frame)

* EII Message Bus Improvements

    * Enable XPUB-XSUB messaging pattern of EII Message Bus.
    * Dynamic loading of protocol plugins

